--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.data.mongodb.uri=mongodb+srv://INE-Learning:AC-fb4%21ipn-4R%24T@cluster0.vk6h2rj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=inelearns
+server.address=0.0.0.0
+server.port=${PORT}
 
 authentication.app.jwtSecret= bezKoderSecretKey
 authentication.app.jwtExpirationMs= 86400000
